# LIME-XAI

./: README.md  main.py  pyproject.toml
Classification Case Study/: classification_LIME.ipynb
Regression Case Study/: regression_LIME.ipynb
